<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">solo-voleibol</string>
    <string name="players">Players</string>
    <string name="team_name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="update">update</string>
    <string name="teams_management">Teams Management</string>
    <string name="teams">Teams</string>
    <string name="action_bar_title_here">Title Here</string>
    <string name="edit">Edit</string>
    <string name="logo">Logo</string>
    <string name="player_name">name</string>
    <string name="player_number">Number</string>
    <string name="add">Add</string>
    <string name="player_no_sign">#</string>
    <string name="player_photo">Photo</string>
    <string name="player_deleted">Player has been deleted</string>
    <string name="player_delete_error">An error occurred while deleting the player. Try again!</string>
    <string name="players_edit_error">Error editing the player. Try again!</string>
    <string name="player_add_error">Error saving Player to database. Try Again!!!</string>
    <string name="player_edit_cancelled">Action cancelled</string>
    <string name="teams_pick_layout_txt_pick">Select a Team</string>
    <string name="no_teams_defined">No Teams Defined</string>
    <string name="pick_a_team">Pick a Team</string>
    <string name="all_teams_msg">All Teams</string>
    <string name="players_relation_saved">The relation of players have been saved!!!</string>
    <string name="spike">Spike</string>
    <string name="block">Block</string>
    <string name="bad_block">Bad Block</string>
    <string name="start_game">Start Match</string>
    <string name="show_hide_desc">Show Hide</string>
    <string name="prefs_match">Match Preference</string>
    <string name="tens">tens</string>
    <string name="units">units</string>
    <string name="home_sets">Home Sets</string>
    <string name="foe_sets">Foe Sets</string>
    <string name="bad_spike">Bad Spike</string>
    <string name="undo">Undo</string>
    <string name="solo_volei">Solo Voleibol</string>
    <string name="set_review_actions_ques">Do you want to review the actions of this set?</string>
    <string name="pref_app_language_category_title">Language</string>
    <string name="pref_language_title">Language</string>
    <string name="ace_serve">Ace Serve</string>
    <string name="bad_serve">Bad Serve</string>
</resources>
