<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
<RelativeLayout android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:gravity="center_horizontal"
    android:layout_centerHorizontal="true"
    android:id="@+id/volei_action_picker_lyt_buttons_container">
    
<Button
    android:id="@+id/volei_action_picker_btn_spike"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="23dp"
    android:text="@string/spike" />

<Button
    android:id="@+id/volei_action_picker_btn_soft_spike"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_toRightOf="@+id/volei_action_picker_btn_spike"
    android:text="@string/soft_spike" />

<Button
    android:id="@+id/volei_action_picker_btn_block"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_toRightOf="@+id/volei_action_picker_btn_soft_spike"
    android:text="@string/block" />

<Button
    android:id="@+id/volei_action_picker_btn_bad_block"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_toRightOf="@+id/volei_action_picker_btn_block"
    android:text="@string/bad_block" />

<Button
    android:id="@+id/volei_action_picker_layout_btn_bad_spike"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_toRightOf="@+id/volei_action_picker_btn_bad_block"
    android:text="@string/bad_spike" />

<ImageButton android:id="@+id/volei_action_picker_btn_undo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@id/volei_action_picker_layout_btn_bad_spike"
    android:src="@android:drawable/ic_menu_revert"
    android:contentDescription="@string/undo" />

</RelativeLayout>

<ImageButton
    android:id="@+id/volei_action_picker_btn_show_hide"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:contentDescription="@string/show_hide_desc"
    android:src="@android:drawable/arrow_up_float" />

</RelativeLayout>