<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/players_list_item_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:maxHeight="75dip"
        android:maxWidth="75dip"
        android:minHeight="55dip"
        android:minWidth="55dip"
        android:contentDescription="@string/logo"
        android:src="@android:drawable/ic_menu_slideshow" />

    <TextView
        android:id="@+id/players_list_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/players_list_item_foto"
        android:layout_toRightOf="@+id/players_list_item_foto"
        android:text="@string/team_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/players_list_item_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/players_list_item_name"
        android:layout_alignParentRight="true"
        android:text="@string/player_no_sign"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>